extract some interfaces, fix ClassUtil perfomance issue, add SimplePerfomanceTest